<resources>
    <string name="app_name">QuizFarmacia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quiz Farmacia - Chimica e Tecnologie Farmaceutiche</string>
    <string name="nav_header_subtitle">github.com/lormico/quiz-farmacia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_archive">Archivio Quesiti</string>
    <string name="menu_quiz">Quiz</string>

    <string name="header_quiz_home">Nuovo Quiz</string>
    <string name="header_quiz_container">Quiz</string>
    <string name="header_quiz_results">Risultati Quiz</string>
    <string name="start_quiz">Avvia Quiz</string>
    <string name="quiz_welcome">Benvenuto!\nPer avviare un nuovo quiz, premi il pulsante sotto.\nPuoi accedere all\'archivio dei quesiti con il menu a scomparsa a sinistra, e alle impostazioni con i tre puntini in alto a destra.</string>
    <string name="quiz_instructions">Le domande ti verranno presentate su delle schede numerate: fai tap sulla risposta che vuoi selezionare (o deselezionare) e trascina il dito a destra o sinistra per cambiare domanda. Quando sarai pronto, tocca il pulsante in basso a destra per consegnare.</string>

    <string name="question_metadata_placeholder">%1$s #%2$d"</string>
    <string name="quiz_results_score">Hai ottenuto un punteggio di %1$.2f punti!</string>
    <string name="quiz_results_num_ok">Domande risposte correttamente: %1$d</string>
    <string name="quiz_results_num_failed">Domande risposte erroneamente: %1$d</string>
    <string name="quiz_results_num_unanswered">Domande senza risposta: %1$d</string>

    <string name="placeholder_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in placerat leo. Aenean pellentesque est a ornare gravida. Curabitur pretium tincidunt nunc eget feugiat. Donec in tincidunt lectus. Nullam in mauris ut sapien venenatis accumsan. Praesent lorem nibh, mattis sit.</string>
    <string name="placeholder_text">Placeholder Text</string>

    <string name="settings_num_questions_biology">Domande di Biologia</string>
    <string name="settings_num_questions_general_chemistry">Domande di Chimica Generale e Inorganica</string>
    <string name="settings_num_questions_organic_chemistry">Domande di Chimica Organica</string>
    <string name="settings_num_questions_physics">Domande di Fisica</string>
    <string name="settings_num_questions_maths">Domande di Matematica</string>

    <string name="quiz_hand_in_confirmation_title">Conferma la consegna</string>
    <string name="quiz_hand_in_confirmation_msg">Sei sicuro di voler terminare il test?</string>
    <string name="quiz_timeout_alert_title">Tempo scaduto</string>
    <string name="quiz_timeout_alert_msg">È scaduto il tempo a disposizione per il quiz, ed è stato consegnato automaticamente!</string>

    <string name="quiz_snackbar_countdown">Tempo rimanente: %1$s</string>

    <string name="affirmative">Sì</string>
    <string name="negative">No</string>
    <string name="tough_titty">Stacce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
