<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.quiz.QuizResultFragment">

    <TextView
        android:id="@+id/quiz_results_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_results_score" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quiz_results_num_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_results_num_ok" />

        <TextView
            android:id="@+id/quiz_results_num_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_results_num_failed" />

        <TextView
            android:id="@+id/quiz_results_num_unanswered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_results_num_unanswered" />
    </LinearLayout>
</LinearLayout>